Fix alignment issues with li tags

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,25 +110,25 @@ header.major p {
   font-size: 1.4em !important;
   text-transform: none !important; }
 
-.skills-languages {
-  display: flex;
+ul.skills-languages {
+  display: flex !important;
   justify-content: space-evenly;
-  align-content: flex-start;
-  flex-grow: 1;
+  align-content: center;
+  flex-wrap: wrap;
   width: 700px;
   max-width: 80%;
   margin: 0 auto;
   border-radius: 10px; }
 
-.skills-languages li {
+ul.skills-languages li {
   margin: 20px !important;
   font-weight: 700;
   text-align: center; }
 
-.skills-languages .icons {
+ul.skills-languages .icons {
   font-size: 4em; }
 
-.skills-languages svg {
+ul.skills-languages svg {
   width: 4em;
   height: auto; }
 
@@ -152,6 +152,9 @@ header.major p {
 
 #footer {
   background-color: #342857 !important; }
+
+#footer a {
+  font-size: 2em; }
 
 a.icon.brands {
   font-size: 2em !important; }
@@ -222,7 +225,7 @@ ul.fireflies li:nth-of-type(2) {
   -ms-animation-fill-mode: backwards, backwards;
   animation-fill-mode: backwards, backwards; }
 
-li:nth-of-type(3) {
+ul.fireflies li:nth-of-type(3) {
   width: 0.98px;
   height: 0.98px;
   border-radius: 50%;
