--- a/assets/sass/fireflies.scss
+++ b/assets/sass/fireflies.scss
@@ -89,7 +89,7 @@ ul.fireflies li:nth-of-type(2){
     animation-fill-mode: backwards, backwards;
 }
 
-li:nth-of-type(3){
+ul.fireflies li:nth-of-type(3){
     width: 0.98px;
     height: 0.98px;
     border-radius: 50%;
